--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>GameDev</h1>
+    <p>Play the Mini Game [I.01] -> <a href="https://florianhirner.github.io/mini_game/">Shmup</a></p>
   </body>
 </html>
